# sgemm_kokkos

./: .gitignore  CMakeLists.txt  README.md  build.sh  run_sgemm.sh  sgemm.cpp
src/: kernels.hpp  runner.cpp  runner.hpp
src/kernels/: 10_kernel_warptiling.hpp  11_kernel_double_buffering.hpp  12_kernel_double_buffering.hpp  1_naive.hpp  2_kernel_global_mem_coalesce.hpp  3_kernel_shared_mem_blocking.hpp  4_kernel_1D_blocktiling.hpp  5_kernel_2D_blocktiling.hpp  6_kernel_vectorize.hpp  7_kernel_resolve_bank_conflicts.hpp  8_kernel_bank_extra_col.hpp  9_kernel_autotuned.hpp  common.hpp
